--- a/source/_posts/2012-12-12-focus.markdown
+++ b/source/_posts/2012-12-12-focus.markdown
@@ -4,7 +4,7 @@ title: "Focus"
 author: eloyesp
 date: 2012-12-12 15:31
 comments: true
-categories: talks meetups
+categories: meetup
 ---
 
 Bueno, este post de ejemplo es sobre la charla sobre focus, que tuvo un impacto
